# lgca

./: .gitignore  CMakeLists.txt  COPYING  README.md
_layouts/: default.html
apps/box/: CMakeLists.txt  box_viewer.cpp  box_viewer.h  box_viewer.ui  main.cpp
apps/diffusion/: CMakeLists.txt  diffusion_viewer.cpp  diffusion_viewer.h  diffusion_viewer.ui  main.cpp
apps/karman/: CMakeLists.txt  karman_viewer.cpp  karman_viewer.h  karman_viewer.ui  main.cpp
apps/periodic/: CMakeLists.txt  main.cpp
apps/pipe/: CMakeLists.txt  main.cpp  pipe_viewer.cpp  pipe_viewer.h  pipe_viewer.ui
apps/single/: CMakeLists.txt  main.cpp  single_viewer.cpp  single_viewer.h  single_viewer.ui
src/: cu_lattice.cu  cu_lattice.h  cuda_utils.cuh  cuda_utils.h  lattice.cpp  lattice.cu  lattice.h  lgca_bitset.h  lgca_common.h  lgca_io_vti.cpp  lgca_io_vti.h  lgca_jet.h  lgca_models.h  lgca_viewer.cpp  lgca_viewer.h  lgca_viewer.ui  main.cpp  main.cu  omp_lattice.cpp  omp_lattice.cu  omp_lattice.h  utils.h
